--- a/Husnutdinov_Glazki_Save.csproj
+++ b/Husnutdinov_Glazki_Save.csproj
@@ -117,6 +117,9 @@
     <Compile Include="ProductType.cs">
       <DependentUpon>Husnutdinov_Glazki_Save_Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="SetWindow.xaml.cs">
+      <DependentUpon>SetWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Shop.cs">
       <DependentUpon>Husnutdinov_Glazki_Save_Model.tt</DependentUpon>
     </Compile>
@@ -159,6 +162,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SetWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manager.cs" />
